--- a/users/data_cleaning_eda_emily.ipynb
+++ b/users/data_cleaning_eda_emily.ipynb
@@ -2407,7 +2407,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17145 entries, 0 to 17144\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   id                     17145 non-null  int64  \n",
+      " 1   country                17145 non-null  object \n",
+      " 2   ccode                  17145 non-null  int64  \n",
+      " 3   year                   17145 non-null  int64  \n",
+      " 4   region                 17145 non-null  object \n",
+      " 5   protest                17145 non-null  int64  \n",
+      " 6   protestnumber          17145 non-null  int64  \n",
+      " 7   startday               15239 non-null  float64\n",
+      " 8   startmonth             15239 non-null  float64\n",
+      " 9   startyear              15239 non-null  float64\n",
+      " 10  endday                 15239 non-null  float64\n",
+      " 11  endmonth               15239 non-null  float64\n",
+      " 12  endyear                15239 non-null  float64\n",
+      " 13  protesterviolence      15758 non-null  float64\n",
+      " 14  location               15218 non-null  object \n",
+      " 15  participants_category  9887 non-null   object \n",
+      " 16  participants           15746 non-null  object \n",
+      " 17  protesteridentity      14684 non-null  object \n",
+      " 18  protesterdemand1       15238 non-null  object \n",
+      " 19  protesterdemand2       2977 non-null   object \n",
+      " 20  protesterdemand3       383 non-null    object \n",
+      " 21  protesterdemand4       831 non-null    object \n",
+      " 22  stateresponse1         15208 non-null  object \n",
+      " 23  stateresponse2         2888 non-null   object \n",
+      " 24  stateresponse3         930 non-null    object \n",
+      " 25  stateresponse4         244 non-null    object \n",
+      " 26  stateresponse5         849 non-null    object \n",
+      " 27  stateresponse6         16 non-null     object \n",
+      " 28  stateresponse7         920 non-null    object \n",
+      " 29  sources                15235 non-null  object \n",
+      " 30  notes                  15193 non-null  object \n",
+      "dtypes: float64(7), int64(5), object(19)\n",
+      "memory usage: 4.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2470,7 @@
        "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,138 +2481,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>arrests</th>\n",
-       "      <th>accomodation</th>\n",
-       "      <th>beatings</th>\n",
-       "      <th>crowddispersal</th>\n",
-       "      <th>ignore</th>\n",
-       "      <th>killings</th>\n",
-       "      <th>no_response</th>\n",
-       "      <th>shootings</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  arrests  accomodation  beatings  crowddispersal  ignore  \\\n",
-       "0           0        0             0         0               0       1   \n",
-       "1           1        0             0         0               0       1   \n",
-       "2           2        0             0         0               0       1   \n",
-       "3           3        0             1         0               0       0   \n",
-       "4           4        1             1         0               1       0   \n",
-       "\n",
-       "   killings  no_response  shootings  \n",
-       "0         0            6          0  \n",
-       "1         0            6          0  \n",
-       "2         0            6          0  \n",
-       "3         0            6          0  \n",
-       "4         0            4          0  "
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "responses = pd.read_csv('../data/mm_master.csv')\n",
-    "responses.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "responses = pd.read_csv('../data/mm_master.csv')"
+   ]
   }
  ],
  "metadata": {
