uploaded manual and Pauls code to branch emily

--- a/users/data_cleaning_eda_emily.ipynb
+++ b/users/data_cleaning_eda_emily.ipynb
@@ -272,6 +272,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prosperity_df = pd.read_excel('../data/Prosperity_Index.xlsx', sheet_name=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
