--- a/code/02b_Add_Prosperity_Index.ipynb
+++ b/code/02b_Add_Prosperity_Index.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "4    Argentina        60.487355"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,16 +482,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Compare country name in Prosperity Index to Mass Protest data\n",
+    "\n",
     "The country names in the Prosperity Index does not all match the 166 countries in the larger mass protest dataframe.\n",
     "\n",
     "Loop through both dataframes to identify any discrepancies."
@@ -499,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +524,7 @@
        " 'Yugoslavia']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +580,7 @@
        " 'United States']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,34 +590,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "**Bhutan**\n",
+    "\n",
+    "Bhutan is not included in the Prosperity Index.\n",
+    "\n",
+    "From the Legatum Institute [FAQ](https://www.prosperity.com/about/faqs) \n",
+    "\n",
+    ">For some countries in the world there is a lack of available credible data and we have covered over 99% of the world’s population in the Index. To maintain a high level of quality, we only include countries that have data available for at least 50% of our indicators. \n",
+    "\n",
     "Bhutan has 19 blank protest rows, and only two rows with actual protest data. We could assign the same Prosperity score as Nepal since they are neighboring countries, or just drop."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        ".      19\n",
-       "100     1\n",
        "84      1\n",
+       "100     1\n",
        "Name: participants, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,12 +632,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rename Bosnia and Herzegovina to just Bosnia to match mass protest dataframe."
+    "Rename Bosnia and Herzegovina to just **Bosnia** to match mass protest dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +680,7 @@
        "16  Bosnia and Herzegovina        57.998273"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,12 +702,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cape Verde is also known as Cabo Verde. The mass dataframe contains Cape Verde"
+    "**Cape Verde** is also known as Cabo Verde. The mass dataframe contains Cape Verde"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +718,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Congo values:\n",
+    "**Congo**\n",
+    "\n",
     "Mass protest dataframe contains both:\n",
     "* Congo Brazzaville\n",
     "* Congo Kinshasa\n",
@@ -737,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,6 +748,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Czechia**\n",
+    "\n",
     "Mass protest dataframe contains both:\n",
     "\n",
     "* Czech Republic\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "167  Czechoslovakia        73.124612"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -961,12 +961,12 @@
        ".        14\n",
        "50        4\n",
        "200       2\n",
-       "100       1\n",
        "30000     1\n",
+       "100       1\n",
        "Name: participants, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "max          84.368117"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,6 +1083,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Serbia and Montenegro**\n",
+    "\n",
     "Mass protest contains protest data for the following:\n",
     "* Serbia\n",
     "* Montenegro\n",
@@ -1093,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1104,7 @@
        "63.07364108225"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1194,7 @@
        "Name: protest, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1224,7 @@
        "(17145, 31)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1331,7 @@
        "132         Slovenia        74.563150"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1351,7 @@
        "64.38861633025"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1391,7 @@
        "['Bhutan']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1435,7 @@
        " 'United States']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1481,7 @@
        "165"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1501,7 @@
        "166"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,15 +1511,90 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Merge into larger mass protest dataframe."
+    "### Save Prosperity Index data as csv for merging into other notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_PI_df.to_csv('../data/prosperity_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merge** into larger mass protest dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Doing a merge with the defaults will drop rows in mass that do not have a prosperity score (31 rows of Bhutan) \n",
+    "temp_mass = mass.merge(country_PI_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17114, 32)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_mass.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31, 31)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass[mass['country']=='Bhutan'].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1642,16 +1719,37 @@
        "[2 rows x 32 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Doing a merge with this command will keep Bhutan and insert a NaN in its prosperity_2020 column\n",
     "mass = mass.merge(country_PI_df, how='left', \n",
     "                        left_on='country', \n",
     "                        right_on='country')\n",
     "mass.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17145, 32)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass.shape"
    ]
   },
   {
