Minor tweak to temp dataframe variables

--- a/code/02b_Add_Prosperity_Index.ipynb
+++ b/code/02b_Add_Prosperity_Index.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -202,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prosperity_df = pd.read_excel('../data/Legatum_Prosperity_Index_Full_2020_Data_Set.xlsx', sheet_name=0)"
+    "country_PI_df = pd.read_excel('../data/Legatum_Prosperity_Index_Full_2020_Data_Set.xlsx', sheet_name=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -223,12 +223,12 @@
     }
    ],
    "source": [
-    "print (f'The Prosperity Index contains scores on {prosperity_df.shape[0]} countries.')"
+    "print (f'The Prosperity Index contains scores on {country_PI_df.shape[0]} countries.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -377,35 +377,35 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prosperity_df.head(3)"
+    "country_PI_df.head(3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new dataframe containing only the country name, and the overall Prosperity Index score from 2016 (the most recently calculated score.)"
+    "Change dataframe to only contain country name, and the overall Prosperity Index score from 2016 (the most recently calculated score.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_PI_df = prosperity_df[['area_name','score_2020']].copy()\n",
+    "country_PI_df = country_PI_df[['area_name','score_2020']]\n",
     "country_PI_df.columns = ['country', 'prosperity_2020']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "4    Argentina        60.487355"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        " 'Yugoslavia']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        " 'United States']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "Name: participants, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "16  Bosnia and Herzegovina        57.998273"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "167  Czechoslovakia        73.124612"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        "Name: participants, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "max          84.368117"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1104,7 @@
        "63.07364108225"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
        "Name: protest, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
        "(17145, 31)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "132         Slovenia        74.563150"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
        "64.38861633025"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
        "['Bhutan']"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
        " 'United States']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
        "165"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        "166"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1556,7 @@
        "(17114, 32)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
        "(31, 31)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1719,7 @@
        "[2 rows x 32 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
        "(17145, 32)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
