cleaned up participant number columns

--- a/users/data_cleaning_paul.ipynb
+++ b/users/data_cleaning_paul.ipynb
@@ -1536,7 +1536,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mass.info"
+   ]
   },
   {
    "cell_type": "code",
@@ -1576,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
