--- a/users/participants_cleaning.ipynb
+++ b/users/participants_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "Name: participants_category, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "5352"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "12"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "['tens', 'of', 'thousands']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "12119  political behavior, process           ignore  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
        "1821  price increases, tax policy  crowd dispersal  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2153,7 @@
        "Name: participants_cat_converted, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,6 +2169,203 @@
    "outputs": [],
    "source": [
     "# saving updated df as pickle "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 15227 entries, 0 to 17141\n",
+      "Data columns (total 33 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   id                          15227 non-null  int64  \n",
+      " 1   country                     15227 non-null  object \n",
+      " 2   ccode                       15227 non-null  int64  \n",
+      " 3   year                        15227 non-null  int64  \n",
+      " 4   region                      15227 non-null  object \n",
+      " 5   protestnumber               15227 non-null  int64  \n",
+      " 6   startday                    15227 non-null  float64\n",
+      " 7   startmonth                  15227 non-null  float64\n",
+      " 8   startyear                   15227 non-null  float64\n",
+      " 9   endday                      15227 non-null  float64\n",
+      " 10  endmonth                    15227 non-null  float64\n",
+      " 11  endyear                     15227 non-null  float64\n",
+      " 12  protesterviolence           15227 non-null  float64\n",
+      " 13  location                    15206 non-null  object \n",
+      " 14  participants_category       9882 non-null   object \n",
+      " 15  participants                15227 non-null  object \n",
+      " 16  protesteridentity           15227 non-null  object \n",
+      " 17  protesterdemand1            15226 non-null  object \n",
+      " 18  protesterdemand2            2975 non-null   object \n",
+      " 19  protesterdemand3            383 non-null    object \n",
+      " 20  protesterdemand4            779 non-null    object \n",
+      " 21  stateresponse1              15196 non-null  object \n",
+      " 22  stateresponse2              2885 non-null   object \n",
+      " 23  stateresponse3              929 non-null    object \n",
+      " 24  stateresponse4              243 non-null    object \n",
+      " 25  stateresponse5              797 non-null    object \n",
+      " 26  stateresponse6              16 non-null     object \n",
+      " 27  stateresponse7              856 non-null    object \n",
+      " 28  sources                     15223 non-null  object \n",
+      " 29  notes                       15181 non-null  object \n",
+      " 30  protester_id_type           15227 non-null  object \n",
+      " 31  participants_converted      15227 non-null  int64  \n",
+      " 32  participants_cat_converted  15227 non-null  object \n",
+      "dtypes: float64(7), int64(5), object(21)\n",
+      "memory usage: 3.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'country', 'ccode', 'year', 'region', 'protestnumber', 'startday',\n",
+       "       'startmonth', 'startyear', 'endday', 'endmonth', 'endyear',\n",
+       "       'protesterviolence', 'location', 'participants_category',\n",
+       "       'participants', 'protesteridentity', 'protesterdemand1',\n",
+       "       'protesterdemand2', 'protesterdemand3', 'protesterdemand4',\n",
+       "       'stateresponse1', 'stateresponse2', 'stateresponse3', 'stateresponse4',\n",
+       "       'stateresponse5', 'stateresponse6', 'stateresponse7', 'sources',\n",
+       "       'notes', 'protester_id_type', 'participants_converted',\n",
+       "       'participants_cat_converted'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass.drop(columns=['participants_category','participants'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'country', 'ccode', 'year', 'region', 'protestnumber', 'startday',\n",
+       "       'startmonth', 'startyear', 'endday', 'endmonth', 'endyear',\n",
+       "       'protesterviolence', 'location', 'protesteridentity',\n",
+       "       'protesterdemand1', 'protesterdemand2', 'protesterdemand3',\n",
+       "       'protesterdemand4', 'stateresponse1', 'stateresponse2',\n",
+       "       'stateresponse3', 'stateresponse4', 'stateresponse5', 'stateresponse6',\n",
+       "       'stateresponse7', 'sources', 'notes', 'protester_id_type',\n",
+       "       'participants_converted', 'participants_cat_converted'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass.rename(columns={\"participants_converted\": \"partipants_number\", \"participants_cat_converted\": \"protest_size_category\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'country', 'ccode', 'year', 'region', 'protestnumber', 'startday',\n",
+       "       'startmonth', 'startyear', 'endday', 'endmonth', 'endyear',\n",
+       "       'protesterviolence', 'location', 'protesteridentity',\n",
+       "       'protesterdemand1', 'protesterdemand2', 'protesterdemand3',\n",
+       "       'protesterdemand4', 'stateresponse1', 'stateresponse2',\n",
+       "       'stateresponse3', 'stateresponse4', 'stateresponse5', 'stateresponse6',\n",
+       "       'stateresponse7', 'sources', 'notes', 'protester_id_type',\n",
+       "       'partipants_number', 'protest_size_category'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass.to_pickle('../data/01_EDA_participant_numbers.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass.to_csv('../data/01_EDA_participant_numbers.csv', index=False)"
    ]
   },
   {
