started sentiment analysis

--- a/users/data_cleaning_eda_emily.ipynb
+++ b/users/data_cleaning_eda_emily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,11 +34,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass = pd.read_csv('../source/mmALL_073120_csv.csv')"
+    "mass_old = pd.read_csv('../source/mmALL_073120_csv.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>country</th>\n",
+       "      <th>ccode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>region</th>\n",
+       "      <th>protest</th>\n",
+       "      <th>protestnumber</th>\n",
+       "      <th>startday</th>\n",
+       "      <th>startmonth</th>\n",
+       "      <th>startyear</th>\n",
+       "      <th>...</th>\n",
+       "      <th>protesterdemand4</th>\n",
+       "      <th>stateresponse1</th>\n",
+       "      <th>stateresponse2</th>\n",
+       "      <th>stateresponse3</th>\n",
+       "      <th>stateresponse4</th>\n",
+       "      <th>stateresponse5</th>\n",
+       "      <th>stateresponse6</th>\n",
+       "      <th>stateresponse7</th>\n",
+       "      <th>sources</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, country, ccode, year, region, protest, protestnumber, startday, startmonth, startyear, endday, endmonth, endyear, protesterviolence, location, participants_category, participants, protesteridentity, protesterdemand1, protesterdemand2, protesterdemand3, protesterdemand4, stateresponse1, stateresponse2, stateresponse3, stateresponse4, stateresponse5, stateresponse6, stateresponse7, sources, notes]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass_old[mass_old['country']=='Australia']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    15239\n",
+       "0     1906\n",
+       "Name: protest, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass_old['protest'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Afghanistan',\n",
+       " 'Albania',\n",
+       " 'Algeria',\n",
+       " 'Angola',\n",
+       " 'Argentina',\n",
+       " 'Armenia',\n",
+       " 'Austria',\n",
+       " 'Azerbaijan',\n",
+       " 'Bahrain',\n",
+       " 'Bangladesh',\n",
+       " 'Belarus',\n",
+       " 'Belgium',\n",
+       " 'Benin',\n",
+       " 'Bhutan',\n",
+       " 'Bolivia',\n",
+       " 'Bosnia',\n",
+       " 'Botswana',\n",
+       " 'Brazil',\n",
+       " 'Bulgaria',\n",
+       " 'Burkina Faso',\n",
+       " 'Burundi',\n",
+       " 'Cambodia',\n",
+       " 'Cameroon',\n",
+       " 'Canada',\n",
+       " 'Cape Verde',\n",
+       " 'Central African Republic',\n",
+       " 'Chad',\n",
+       " 'Chile',\n",
+       " 'China',\n",
+       " 'Colombia',\n",
+       " 'Comoros',\n",
+       " 'Congo Brazzaville',\n",
+       " 'Congo Kinshasa',\n",
+       " 'Costa Rica',\n",
+       " 'Croatia',\n",
+       " 'Cuba',\n",
+       " 'Cyprus',\n",
+       " 'Czech Republic',\n",
+       " 'Czechoslovakia',\n",
+       " 'Denmark',\n",
+       " 'Djibouti',\n",
+       " 'Dominican Republic',\n",
+       " 'Ecuador',\n",
+       " 'Egypt',\n",
+       " 'El Salvador',\n",
+       " 'Equatorial Guinea',\n",
+       " 'Eritrea',\n",
+       " 'Estonia',\n",
+       " 'Ethiopia',\n",
+       " 'Finland',\n",
+       " 'France',\n",
+       " 'Gabon',\n",
+       " 'Gambia',\n",
+       " 'Georgia',\n",
+       " 'Germany',\n",
+       " 'Germany East',\n",
+       " 'Germany West',\n",
+       " 'Ghana',\n",
+       " 'Greece',\n",
+       " 'Guatemala',\n",
+       " 'Guinea',\n",
+       " 'Guinea-Bissau',\n",
+       " 'Guyana',\n",
+       " 'Haiti',\n",
+       " 'Honduras',\n",
+       " 'Hungary',\n",
+       " 'India',\n",
+       " 'Indonesia',\n",
+       " 'Iran',\n",
+       " 'Iraq',\n",
+       " 'Ireland',\n",
+       " 'Italy',\n",
+       " 'Ivory Coast',\n",
+       " 'Jamaica',\n",
+       " 'Japan',\n",
+       " 'Jordan',\n",
+       " 'Kazakhstan',\n",
+       " 'Kenya',\n",
+       " 'Kosovo',\n",
+       " 'Kuwait',\n",
+       " 'Kyrgyzstan',\n",
+       " 'Laos',\n",
+       " 'Latvia',\n",
+       " 'Lebanon',\n",
+       " 'Lesotho',\n",
+       " 'Liberia',\n",
+       " 'Libya',\n",
+       " 'Lithuania',\n",
+       " 'Luxembourg',\n",
+       " 'Macedonia',\n",
+       " 'Madagascar',\n",
+       " 'Malawi',\n",
+       " 'Malaysia',\n",
+       " 'Mali',\n",
+       " 'Mauritania',\n",
+       " 'Mauritius',\n",
+       " 'Mexico',\n",
+       " 'Moldova',\n",
+       " 'Mongolia',\n",
+       " 'Montenegro',\n",
+       " 'Morocco',\n",
+       " 'Mozambique',\n",
+       " 'Myanmar',\n",
+       " 'Namibia',\n",
+       " 'Nepal',\n",
+       " 'Netherlands',\n",
+       " 'Nicaragua',\n",
+       " 'Niger',\n",
+       " 'Nigeria',\n",
+       " 'North Korea',\n",
+       " 'Norway',\n",
+       " 'Oman',\n",
+       " 'Pakistan',\n",
+       " 'Panama',\n",
+       " 'Papua New Guinea',\n",
+       " 'Paraguay',\n",
+       " 'Peru',\n",
+       " 'Philippines',\n",
+       " 'Poland',\n",
+       " 'Portugal',\n",
+       " 'Qatar',\n",
+       " 'Romania',\n",
+       " 'Russia',\n",
+       " 'Rwanda',\n",
+       " 'Saudi Arabia',\n",
+       " 'Senegal',\n",
+       " 'Serbia',\n",
+       " 'Serbia and Montenegro',\n",
+       " 'Sierra Leone',\n",
+       " 'Singapore',\n",
+       " 'Slovak Republic',\n",
+       " 'Slovenia',\n",
+       " 'Somalia',\n",
+       " 'South Africa',\n",
+       " 'South Korea',\n",
+       " 'South Sudan',\n",
+       " 'Spain',\n",
+       " 'Sri Lanka',\n",
+       " 'Sudan',\n",
+       " 'Suriname',\n",
+       " 'Swaziland',\n",
+       " 'Sweden',\n",
+       " 'Switzerland',\n",
+       " 'Syria',\n",
+       " 'Taiwan',\n",
+       " 'Tajikistan',\n",
+       " 'Tanzania',\n",
+       " 'Thailand',\n",
+       " 'Timor Leste',\n",
+       " 'Togo',\n",
+       " 'Tunisia',\n",
+       " 'Turkey',\n",
+       " 'Turkmenistan',\n",
+       " 'USSR',\n",
+       " 'Uganda',\n",
+       " 'Ukraine',\n",
+       " 'United Arab Emirate',\n",
+       " 'United Kingdom',\n",
+       " 'Uruguay',\n",
+       " 'Uzbekistan',\n",
+       " 'Venezuela',\n",
+       " 'Vietnam',\n",
+       " 'Yemen',\n",
+       " 'Yugoslavia',\n",
+       " 'Zambia',\n",
+       " 'Zimbabwe']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(list(mass_old['country'].value_counts().index))"
    ]
   },
   {
